--- a/website/index.html
+++ b/website/index.html
@@ -61,7 +61,7 @@
                 <a href="#projects">Projects</a>
                 <a href="#work">Work History</a>
                 <a href="#education">Education</a>
-                <a href="#blog">Blog</a>
+                <a href="#blog">Blog Posts</a>
                 <a href="#contact">Contact</a>
             </nav>
         </div>
